# MedianCalculator

./: .gitignore  CMakeLists.txt  README.md  how-to-build.md  specs.md
data/: data1.csv  data2.csv  foo.toml
src/: Algorithms.h  Config.cpp  Config.h  CsvSetParser.h  Logging.cpp  Logging.h  Misc.cpp  Misc.h  default_pch.h  main.cpp
test/: AlgorithmsTests.cpp  ConfigTests.cpp  CsvSetParserTests.cpp  MiscTests.cpp  test1.cpp  test_main.cpp
